@@ -34,6 +34,11 @@ Changes Since 0.14
 
   - Fix [ 281 ] Remove escaping backslashes in meta directive content.
 
+* docutils/writers/html5_polyglot/
+
+  - automatically add HTML5-compatible meta tags for docinfo items
+    "authors", "date", and "copyright".
+
 * docutils/writers/latex2e/__init__.py
 
   - Fix [ 323 ] spurious ``\phantomsection`` and whitespace in
